--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Prerequisites
+*~
 *.d
 
 # Compiled Object files
@@ -30,3 +31,13 @@
 *.exe
 *.out
 *.app
+
+# Eclipse
+.cproject
+.project
+
+build.properties
+build.xml
+.metadata
+RemoteSystemsTempFiles
+tempfile
